--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ node_modules
 ##################
 .env
 package-lock.json
+
+# my files #
+############
+*.code-workspace
+build.yaml
+
+.vscode/settings.json
