--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "ncp": "^2.0.0",
     "node-abi": "^3.33.0",
     "node-gyp": "^9.3.1",
+    "node-hid": "^2.1.1",
     "serialport": "^10.5.0",
     "socket.io": "^4.6.1",
-    "xmodem.js": "^0.1.0"
+    "shuttle-control-usb": "hopejr/ShuttleControlUSB.git#v1.0.4",
+    "usb-detection": "github:MadLittleMods/node-usb-detection"
   },
   "main": "index.js",
   "scripts": {
